platform/auth/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: identity
  labels:
    istio-injection: enabled
